<resources>
    <string name="app_name">Quizzz</string>
    <string name="cadastro">Register</string>
    <string name="nome">Name</string>
    <string name="email">Email</string>
    <string name="senha">Password</string>
    <string name="confirma">Confirm your password</string>
    <string name="entrar">Log in</string>

    <string-array name="categorias">

        <item>random</item>
        <item>General Knowledge</item>
        <item>Entertainment: Books</item>
        <item>Entertainment: Film</item>
        <item>Entertainment: Music</item>
        <item>Entertainment: Musicals and Theatres</item>
        <item>Entertainment: Television</item>
        <item>Entertainment: Video Games</item>
        <item>Entertainment: Board Games</item>
        <item>Science and Nature</item>
        <item>Science: Computers</item>
        <item>Science: Mathematics</item>
        <item>Mythology</item>
        <item>Sports</item>
        <item>Geography</item>
        <item>History</item>
        <item>Politics</item>
        <item>Art</item>
        <item>Celebrities</item>
        <item>Animals</item>
        <item>Vehicles</item>
        <item>Entertainment: Comics</item>
        <item>Science: Gadgets</item>
        <item>Entertainment: Japanese Anime and Manga</item>
        <item>Entertainment: Cartoon and Animations</item>
    </string-array>
    <string name="facil">Easy</string>
    <string name="medio">Medium</string>
    <string name="dificil">Hard</string>
    <string name="dificuldade">Select a difficulty</string>
    <string name="categoria">Select a category</string>
    <string name="play">Play</string>
</resources>


