<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@android:color/white">

    <TextView
            android:text="@string/cadastro"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:gravity="center" android:textColor="@android:color/black" android:textStyle="bold"
            android:textSize="30sp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtNome"
            android:hint="@string/nome"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp" android:layout_marginEnd="24dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="24dp"
            android:layout_marginTop="75dp" app:layout_constraintTop_toBottomOf="@+id/textView"
            android:drawableRight="@drawable/ic_account_box_black_24dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/txtEmail"
            android:hint="@string/email"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="24dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txtNome"
            android:drawableRight="@drawable/ic_mail_outline_black_24dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/txtSenha"
            android:hint="@string/senha" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txtEmail"
            android:layout_marginEnd="24dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="24dp"
            android:layout_marginStart="24dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp" android:drawableRight="@drawable/ic_lock_black_24dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/txtConfirma"
            android:hint="@string/confirma" app:layout_constraintTop_toBottomOf="@+id/txtSenha"
            android:layout_marginEnd="24dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="24dp"
            android:layout_marginStart="24dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp" android:layout_marginTop="16dp"
            android:drawableRight="@drawable/ic_lock_black_24dp"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btCadastro" android:text="@string/cadastro"
            android:layout_marginTop="50dp" app:layout_constraintTop_toBottomOf="@+id/txtConfirma"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="50dp" android:layout_marginRight="50dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp" android:background="@drawable/button_border"/>
</androidx.constraintlayout.widget.ConstraintLayout>